@@ -57,6 +57,7 @@
  Bug fixes:
 
    - AccountSelect: close the window on account selection (todo #1187).
+   - BatlineTreeview: fix columns visibility change (todo #1219).
    - IPrintable: does not say "succesfully printed" when cancelled (todo #1188).
    - ITreeAdder: fix columns adding (todo #1190).
    - LedgerClose: fix typo.
